--- a/src/login.css
+++ b/src/login.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
-  background-color: white;
+  background-image:url(../src/assets/fondppale.png);
 }
 #container {
   width: 500px;
