--- a/src/css/ajoutEt.css
+++ b/src/css/ajoutEt.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 100;
+  z-index: 200;
   position: absolute;
   top: 0;
   left: 0;
@@ -26,10 +26,10 @@
   margin-bottom: 60px;
   margin-top: 30px;
   font-weight: 600;
-
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"] {
   width: 65%;
   padding: 12px 15px;
   margin: -10px 0;
@@ -43,12 +43,14 @@ input[type="text"] {
   background-color: #00000008;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="email"]:focus {
   outline: none;
   border-bottom: 1px solid blueviolet;
 }
 
-input[type="button"] {
+input[type="button"],
+input[type="submit"] {
   width: 30%;
   padding: 12px 15px;
   border: none;
@@ -67,20 +69,19 @@ form {
   display: flex;
   flex-direction: column;
 }
-.button{
+.button {
   display: flex;
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
 }
-.button .annuler{
+.button .annuler {
   background-color: rgba(0, 0, 0, 0.064);
   color: rgb(0, 0, 46);
-
 }
-.button .annuler:hover{
+.button .annuler:hover {
   background-color: rgba(0, 0, 0, 0.123);
 }
-.button .ajouter:hover{
+.button .ajouter:hover {
   background-color: #0068d7;
 }
