--- a/src/css/statistique.css
+++ b/src/css/statistique.css
@@ -57,8 +57,11 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  border-left: 1px solid black;
   padding-left: 30px;
+}
+#diag{
+    display: flex;
+    align-items: center;
 }
 .contstat11 h2 {
   margin: 10px;
